@@ -3,6 +3,7 @@ ver 0.17 (2011/??/??)
   - support client-to-client communication
   - "update" and "rescan" need only "CONTROL" permission
   - new command "seekcur" for simpler seeking within current song
+  - new command "config" dumps location of music directory
   - add range parameter to command "load"
   - print extra "playlist" object for embedded CUE sheets
 * input:
